--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.2",
     "axios": "^0.26.1",
+    "material-icons": "^1.10.8",
     "react-router-dom": "^6.3.0",
     "swiper": "^8.1.3"
   }
